--- a/.gitignore
+++ b/.gitignore
@@ -364,9 +364,9 @@ ASALocalRun/
 # Visual Studio History (VSHistory) files
 .vshistory/
 
-obj
-bin
-.idea
+obj/
+bin/
+.idea/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
